# aiseed-migration-kit

./: .gitignore  DESIGN.md  README.md  pyproject.toml
.zed/: tasks.json
docs/reference/: README.md
sites/example/: site.yaml
sites/example/content/: access.md
sites/example/content/guide/: shiken.md
sites/example/content/news/: 2026-06-02-setsubi-koukai.md  2026-06-20-dx-seminar.md  2026-07-01-natsuki-kyugyou.md
sites/example/data/: top.yaml
sites/example/forms/: contact.adoc  shiken.adoc
sites/mfg/: site.yaml
sites/mfg/forms/: mitsumori.adoc
sites/seminar/: site.yaml
sites/seminar/forms/: moshikomi.adoc
src/amig/: __init__.py  adoc.py  build.py  classify.py  cli.py  convert.py  decision.py  ingest.py  llm.py  publish.py  site.py
src/amig/inquiry/: __init__.py  derive.py  forms.py  mail.py  mailin.py  parse.py  profile.py  spec.py
src/amig/templates/static/: style.css
src/cmsmig/: __init__.py  build.py  classify.py  cli.py  convert.py  ingest.py  publish.py  rules.py  site.py
src/cmsmig/inquiry/: __init__.py  forms.py  mail.py  mailin.py  parse.py
src/cmsmig/templates/: base.html  index.html  list.html  page.html
src/cmsmig/templates/static/: style.css
tests/: conftest.py  test_build.py  test_decision.py  test_derive.py  test_inquiry.py  test_llm.py  test_mailin.py  test_pipeline.py  test_profile.py  test_publish.py  test_showcase.py  test_site.py  test_spec.py
