[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cms-migration-kit"
version = "0.1.0"
description = "動的CMSを静的配信+自営スタックへ移行するキット(取り込み・変換・生成・配信・問い合わせ様式)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "aiseed-dev" }]
dependencies = [
    "jinja2>=3.1",
    "pyyaml>=6",
    "markdown-it-py>=3",
    "beautifulsoup4>=4.12",
    "markdownify>=0.13",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]
publish = ["cf-publish>=0.2"]

[project.scripts]
cmsmig = "cmsmig.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cmsmig"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
